src/parser/grammar.output
Terminals unused in grammar

   T_TWIGIL
   T_OUR
   T_HAS
   T_SPLAT
   T_SLASH
   T_BSLASH
   T_LAMBDA
   T_LAMBDA_RW
   T_RANGE
   T_ELLIPSES
   T_ID_CMP
   T_NOT
   T_CAROT
   T_OR_EQ
   T_MOD
   T_REGEX_OPEN
   T_REGEX_NAME
   T_REGEX_START
   T_REGEX_END
   T_BARBAR
   T_REGEX_AND
   T_AND
   T_MAKE
   T_GIVEN
   T_WHEN
   T_INLINE_IF
   T_INLINE_ELSE
   T_LBRACKET


State 26 conflicts: 1 shift/reduce
State 38 conflicts: 2 shift/reduce
State 46 conflicts: 1 shift/reduce
State 50 conflicts: 2 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_declarator T_SEMICOLON
    5     | package_declarator
    6     | func_declarator
    7     | regex_declarator
    8     | stmt_control
    9     | T_RETURN expr_list T_SEMICOLON
   10     | expr_list T_SEMICOLON
   11     | expr_list

   12 func_ident: T_ID
   13           | '&' T_ID

   14 package_declarator: T_PACKAGE T_ID xblock
   15                   | T_MODULE T_ID xblock
   16                   | T_CLASS T_ID xblock
   17                   | T_GRAMMAR T_ID xblock
   18                   | T_ROLE T_ID xblock

   19 func_declarator: T_SUB func_ident signature xblock
   20                | T_METHOD func_ident signature xblock
   21                | T_SUBMETHOD func_ident signature xblock

   22 regex_declarator: regex_type_identifier func_ident rblock

   23 regex_type_identifier: T_TOKEN
   24                      | T_REGEX
   25                      | T_RULE

   26 rblock: T_LBRACE '<' T_RBRACE
   27       | T_LBRACE T_RBLOCK T_RBRACE

   28 signature: T_LPAREN param_list T_RPAREN

   29 param_list: /* empty */
   30           | parameter
   31           | param_list T_COMMA parameter

   32 parameter: param_variable
   33          | T_MUL param_variable
   34          | param_variable '?'
   35          | named_param

   36 param_variable: variable
   37               | variable assignment expr

   38 named_param: ':' param_variable

   39 var_declarator: T_MY variable
   40               | T_MY variable assignment expr_list

   41 variable: T_SIGIL T_ID

   42 stmt_control: if_stmt
   43             | unless_stmt
   44             | for_stmt
   45             | for_inline_stmt
   46             | while_stmt

   47 if_stmt: T_IF expr_list xblock
   48        | T_IF expr_list xblock T_ELSE xblock
   49        | T_IF expr_list xblock elsif_stmt
   50        | T_IF expr_list xblock elsif_stmt T_ELSE xblock

   51 elsif_stmt: T_ELSIF xblock
   52           | elsif_stmt T_ELSIF xblock

   53 unless_stmt: T_UNLESS expr_list xblock

   54 for_stmt: T_FOR expr_list xblock

   55 for_inline_stmt: expr_list T_FOR expr_list T_SEMICOLON

   56 while_stmt: T_WHILE expr_list xblock

   57 methodop: func_ident T_LPAREN args_list T_RPAREN
   58         | variable T_DOT func_ident T_LPAREN args_list T_RPAREN
   59         | T_ID T_DOT func_ident T_LPAREN args_list T_RPAREN

   60 args_list: /* empty */
   61          | expr
   62          | args_list T_COMMA expr

   63 xblock: T_LBRACE T_RBRACE
   64       | T_LBRACE stmts T_RBRACE

   65 expr_list: expr
   66          | expr_list T_COMMA expr

   67 expr: variable assignment expr
   68     | variable infix expr
   69     | constants infix expr
   70     | methodop
   71     | T_RBRACKET args_list T_RBRACKET
   72     | prefix expr
   73     | T_LPAREN args_list T_RPAREN
   74     | constants
   75     | variable

   76 p6regex: '/' nibbler '/'

   77 nibbler: T_STRINGC
   78        | '|' T_STRINGC

   79 number: T_DIGIT
   80       | T_DIGIT T_DOT T_DIGIT

   81 constants: number
   82          | stringc
   83          | p6regex

   84 infix: comparison
   85      | math_ops
   86      | string_ops
   87      | other_ops

   88 prefix: T_PLUS
   89       | T_STITCH
   90       | T_BAR

   91 stringc: T_STRINGC

   92 assignment: T_EQ
   93           | T_BIND
   94           | T_RO_BIND

   95 other_ops: T_REPEATER

   96 math_ops: T_PLUS
   97         | T_MINUS
   98         | T_MUL
   99         | T_DIV

  100 string_ops: T_STITCH

  101 comparison: T_CN_EQ
  102           | T_CN_NE
  103           | T_CN_LT
  104           | T_CN_GT
  105           | T_CN_LE
  106           | T_CN_GE
  107           | T_CS_EQ
  108           | T_CS_NE
  109           | T_CS_LT
  110           | T_CS_GT
  111           | T_CS_LE
  112           | T_CS_GE
  113           | T_SMARTMATCH


Terminals, with rules where they appear

$end (0) 0
'&' (38) 13
'/' (47) 76
':' (58) 38
'<' (60) 26
'?' (63) 34
'|' (124) 78
error (256)
T_ID (258) 12 13 14 15 16 17 18 41 59
T_DIGIT (259) 79 80
T_RBLOCK (260) 27
T_STRINGC (261) 77 78 91
T_SIGIL (262) 41
T_TWIGIL (263)
T_MY (264) 39 40
T_OUR (265)
T_HAS (266)
T_EQ (267) 92
T_BIND (268) 93
T_RO_BIND (269) 94
T_PACKAGE (270) 14
T_MODULE (271) 15
T_CLASS (272) 16
T_GRAMMAR (273) 17
T_ROLE (274) 18
T_SUB (275) 19
T_METHOD (276) 20
T_SUBMETHOD (277) 21
T_SPLAT (278)
T_REGEX (279) 24
T_TOKEN (280) 23
T_RULE (281) 25
T_SLASH (282)
T_BSLASH (283)
T_LAMBDA (284)
T_LAMBDA_RW (285)
T_RANGE (286)
T_ELLIPSES (287)
T_CN_EQ (288) 101
T_CN_NE (289) 102
T_CN_LT (290) 103
T_CN_GT (291) 104
T_CN_LE (292) 105
T_CN_GE (293) 106
T_CS_EQ (294) 107
T_CS_NE (295) 108
T_CS_LT (296) 109
T_CS_GT (297) 110
T_CS_LE (298) 111
T_CS_GE (299) 112
T_SMARTMATCH (300) 113
T_ID_CMP (301)
T_NOT (302)
T_REPEATER (303) 95
T_CAROT (304)
T_OR_EQ (305)
T_BAR (306) 90
T_PLUS (307) 88 96
T_MINUS (308) 97
T_MUL (309) 33 98
T_DIV (310) 99
T_MOD (311)
T_STITCH (312) 89 100
T_REGEX_OPEN (313)
T_REGEX_NAME (314)
T_REGEX_START (315)
T_REGEX_END (316)
T_BARBAR (317)
T_REGEX_AND (318)
T_AND (319)
T_IF (320) 47 48 49 50
T_ELSIF (321) 51 52
T_ELSE (322) 48 50
T_UNLESS (323) 53
T_FOR (324) 54 55
T_WHILE (325) 56
T_RETURN (326) 9
T_MAKE (327)
T_GIVEN (328)
T_WHEN (329)
T_INLINE_IF (330)
T_INLINE_ELSE (331)
T_LBRACE (332) 26 27 63 64
T_RBRACE (333) 26 27 63 64
T_LPAREN (334) 28 57 58 59 73
T_RPAREN (335) 28 57 58 59 73
T_COMMA (336) 31 62 66
T_SEMICOLON (337) 4 9 10 55
T_DOT (338) 58 59 80
T_RBRACKET (339) 71
T_LBRACKET (340)


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
prog (93)
    on left: 1, on right: 0
stmts (94)
    on left: 2 3, on right: 1 3 64
stmt (95)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
func_ident (96)
    on left: 12 13, on right: 19 20 21 22 57 58 59
package_declarator (97)
    on left: 14 15 16 17 18, on right: 5
func_declarator (98)
    on left: 19 20 21, on right: 6
regex_declarator (99)
    on left: 22, on right: 7
regex_type_identifier (100)
    on left: 23 24 25, on right: 22
rblock (101)
    on left: 26 27, on right: 22
signature (102)
    on left: 28, on right: 19 20 21
param_list (103)
    on left: 29 30 31, on right: 28 31
parameter (104)
    on left: 32 33 34 35, on right: 30 31
param_variable (105)
    on left: 36 37, on right: 32 33 34 38
named_param (106)
    on left: 38, on right: 35
var_declarator (107)
    on left: 39 40, on right: 4
variable (108)
    on left: 41, on right: 36 37 39 40 58 67 68 75
stmt_control (109)
    on left: 42 43 44 45 46, on right: 8
if_stmt (110)
    on left: 47 48 49 50, on right: 42
elsif_stmt (111)
    on left: 51 52, on right: 49 50 52
unless_stmt (112)
    on left: 53, on right: 43
for_stmt (113)
    on left: 54, on right: 44
for_inline_stmt (114)
    on left: 55, on right: 45
while_stmt (115)
    on left: 56, on right: 46
methodop (116)
    on left: 57 58 59, on right: 70
args_list (117)
    on left: 60 61 62, on right: 57 58 59 62 71 73
xblock (118)
    on left: 63 64, on right: 14 15 16 17 18 19 20 21 47 48 49 50 51
    52 53 54 56
expr_list (119)
    on left: 65 66, on right: 9 10 11 40 47 48 49 50 53 54 55 56 66
expr (120)
    on left: 67 68 69 70 71 72 73 74 75, on right: 37 61 62 65 66 67
    68 69 72
p6regex (121)
    on left: 76, on right: 83
nibbler (122)
    on left: 77 78, on right: 76
number (123)
    on left: 79 80, on right: 81
constants (124)
    on left: 81 82 83, on right: 69 74
infix (125)
    on left: 84 85 86 87, on right: 68 69
prefix (126)
    on left: 88 89 90, on right: 72
stringc (127)
    on left: 91, on right: 82
assignment (128)
    on left: 92 93 94, on right: 37 40 67
other_ops (129)
    on left: 95, on right: 87
math_ops (130)
    on left: 96 97 98 99, on right: 85
string_ops (131)
    on left: 100, on right: 86
comparison (132)
    on left: 101 102 103 104 105 106 107 108 109 110 111 112 113, on right:
    84


state 0

    0 $accept: . prog $end

    T_ID         shift, and go to state 1
    T_DIGIT      shift, and go to state 2
    T_STRINGC    shift, and go to state 3
    T_SIGIL      shift, and go to state 4
    T_MY         shift, and go to state 5
    T_PACKAGE    shift, and go to state 6
    T_MODULE     shift, and go to state 7
    T_CLASS      shift, and go to state 8
    T_GRAMMAR    shift, and go to state 9
    T_ROLE       shift, and go to state 10
    T_SUB        shift, and go to state 11
    T_METHOD     shift, and go to state 12
    T_SUBMETHOD  shift, and go to state 13
    T_REGEX      shift, and go to state 14
    T_TOKEN      shift, and go to state 15
    T_RULE       shift, and go to state 16
    T_BAR        shift, and go to state 17
    T_PLUS       shift, and go to state 18
    T_STITCH     shift, and go to state 19
    T_IF         shift, and go to state 20
    T_UNLESS     shift, and go to state 21
    T_FOR        shift, and go to state 22
    T_WHILE      shift, and go to state 23
    T_RETURN     shift, and go to state 24
    T_LPAREN     shift, and go to state 25
    T_RBRACKET   shift, and go to state 26
    '&'          shift, and go to state 27
    '/'          shift, and go to state 28

    prog                   go to state 29
    stmts                  go to state 30
    stmt                   go to state 31
    func_ident             go to state 32
    package_declarator     go to state 33
    func_declarator        go to state 34
    regex_declarator       go to state 35
    regex_type_identifier  go to state 36
    var_declarator         go to state 37
    variable               go to state 38
    stmt_control           go to state 39
    if_stmt                go to state 40
    unless_stmt            go to state 41
    for_stmt               go to state 42
    for_inline_stmt        go to state 43
    while_stmt             go to state 44
    methodop               go to state 45
    expr_list              go to state 46
    expr                   go to state 47
    p6regex                go to state 48
    number                 go to state 49
    constants              go to state 50
    prefix                 go to state 51
    stringc                go to state 52


state 1

   12 func_ident: T_ID .
   59 methodop: T_ID . T_DOT func_ident T_LPAREN args_list T_RPAREN

    T_DOT  shift, and go to state 53

    $default  reduce using rule 12 (func_ident)


state 2

   79 number: T_DIGIT .
   80       | T_DIGIT . T_DOT T_DIGIT

    T_DOT  shift, and go to state 54

    $default  reduce using rule 79 (number)


state 3

   91 stringc: T_STRINGC .

    $default  reduce using rule 91 (stringc)


state 4

   41 variable: T_SIGIL . T_ID

    T_ID  shift, and go to state 55


state 5

   39 var_declarator: T_MY . variable
   40               | T_MY . variable assignment expr_list

    T_SIGIL  shift, and go to state 4

    variable  go to state 56


state 6

   14 package_declarator: T_PACKAGE . T_ID xblock

    T_ID  shift, and go to state 57


state 7

   15 package_declarator: T_MODULE . T_ID xblock

    T_ID  shift, and go to state 58


state 8

   16 package_declarator: T_CLASS . T_ID xblock

    T_ID  shift, and go to state 59


state 9

   17 package_declarator: T_GRAMMAR . T_ID xblock

    T_ID  shift, and go to state 60


state 10

   18 package_declarator: T_ROLE . T_ID xblock

    T_ID  shift, and go to state 61


state 11

   19 func_declarator: T_SUB . func_ident signature xblock

    T_ID  shift, and go to state 62
    '&'   shift, and go to state 27

    func_ident  go to state 63


state 12

   20 func_declarator: T_METHOD . func_ident signature xblock

    T_ID  shift, and go to state 62
    '&'   shift, and go to state 27

    func_ident  go to state 64


state 13

   21 func_declarator: T_SUBMETHOD . func_ident signature xblock

    T_ID  shift, and go to state 62
    '&'   shift, and go to state 27

    func_ident  go to state 65


state 14

   24 regex_type_identifier: T_REGEX .

    $default  reduce using rule 24 (regex_type_identifier)


state 15

   23 regex_type_identifier: T_TOKEN .

    $default  reduce using rule 23 (regex_type_identifier)


state 16

   25 regex_type_identifier: T_RULE .

    $default  reduce using rule 25 (regex_type_identifier)


state 17

   90 prefix: T_BAR .

    $default  reduce using rule 90 (prefix)


state 18

   88 prefix: T_PLUS .

    $default  reduce using rule 88 (prefix)


state 19

   89 prefix: T_STITCH .

    $default  reduce using rule 89 (prefix)


state 20

   47 if_stmt: T_IF . expr_list xblock
   48        | T_IF . expr_list xblock T_ELSE xblock
   49        | T_IF . expr_list xblock elsif_stmt
   50        | T_IF . expr_list xblock elsif_stmt T_ELSE xblock

    T_ID        shift, and go to state 1
    T_DIGIT     shift, and go to state 2
    T_STRINGC   shift, and go to state 3
    T_SIGIL     shift, and go to state 4
    T_BAR       shift, and go to state 17
    T_PLUS      shift, and go to state 18
    T_STITCH    shift, and go to state 19
    T_LPAREN    shift, and go to state 25
    T_RBRACKET  shift, and go to state 26
    '&'         shift, and go to state 27
    '/'         shift, and go to state 28

    func_ident  go to state 32
    variable    go to state 38
    methodop    go to state 45
    expr_list   go to state 66
    expr        go to state 47
    p6regex     go to state 48
    number      go to state 49
    constants   go to state 50
    prefix      go to state 51
    stringc     go to state 52


state 21

   53 unless_stmt: T_UNLESS . expr_list xblock

    T_ID        shift, and go to state 1
    T_DIGIT     shift, and go to state 2
    T_STRINGC   shift, and go to state 3
    T_SIGIL     shift, and go to state 4
    T_BAR       shift, and go to state 17
    T_PLUS      shift, and go to state 18
    T_STITCH    shift, and go to state 19
    T_LPAREN    shift, and go to state 25
    T_RBRACKET  shift, and go to state 26
    '&'         shift, and go to state 27
    '/'         shift, and go to state 28

    func_ident  go to state 32
    variable    go to state 38
    methodop    go to state 45
    expr_list   go to state 67
    expr        go to state 47
    p6regex     go to state 48
    number      go to state 49
    constants   go to state 50
    prefix      go to state 51
    stringc     go to state 52


state 22

   54 for_stmt: T_FOR . expr_list xblock

    T_ID        shift, and go to state 1
    T_DIGIT     shift, and go to state 2
    T_STRINGC   shift, and go to state 3
    T_SIGIL     shift, and go to state 4
    T_BAR       shift, and go to state 17
    T_PLUS      shift, and go to state 18
    T_STITCH    shift, and go to state 19
    T_LPAREN    shift, and go to state 25
    T_RBRACKET  shift, and go to state 26
    '&'         shift, and go to state 27
    '/'         shift, and go to state 28

    func_ident  go to state 32
    variable    go to state 38
    methodop    go to state 45
    expr_list   go to state 68
    expr        go to state 47
    p6regex     go to state 48
    number      go to state 49
    constants   go to state 50
    prefix      go to state 51
    stringc     go to state 52


state 23

   56 while_stmt: T_WHILE . expr_list xblock

    T_ID        shift, and go to state 1
    T_DIGIT     shift, and go to state 2
    T_STRINGC   shift, and go to state 3
    T_SIGIL     shift, and go to state 4
    T_BAR       shift, and go to state 17
    T_PLUS      shift, and go to state 18
    T_STITCH    shift, and go to state 19
    T_LPAREN    shift, and go to state 25
    T_RBRACKET  shift, and go to state 26
    '&'         shift, and go to state 27
    '/'         shift, and go to state 28

    func_ident  go to state 32
    variable    go to state 38
    methodop    go to state 45
    expr_list   go to state 69
    expr        go to state 47
    p6regex     go to state 48
    number      go to state 49
    constants   go to state 50
    prefix      go to state 51
    stringc     go to state 52


state 24

    9 stmt: T_RETURN . expr_list T_SEMICOLON

    T_ID        shift, and go to state 1
    T_DIGIT     shift, and go to state 2
    T_STRINGC   shift, and go to state 3
    T_SIGIL     shift, and go to state 4
    T_BAR       shift, and go to state 17
    T_PLUS      shift, and go to state 18
    T_STITCH    shift, and go to state 19
    T_LPAREN    shift, and go to state 25
    T_RBRACKET  shift, and go to state 26
    '&'         shift, and go to state 27
    '/'         shift, and go to state 28

    func_ident  go to state 32
    variable    go to state 38
    methodop    go to state 45
    expr_list   go to state 70
    expr        go to state 47
    p6regex     go to state 48
    number      go to state 49
    constants   go to state 50
    prefix      go to state 51
    stringc     go to state 52


state 25

   73 expr: T_LPAREN . args_list T_RPAREN

    T_ID        shift, and go to state 1
    T_DIGIT     shift, and go to state 2
    T_STRINGC   shift, and go to state 3
    T_SIGIL     shift, and go to state 4
    T_BAR       shift, and go to state 17
    T_PLUS      shift, and go to state 18
    T_STITCH    shift, and go to state 19
    T_LPAREN    shift, and go to state 25
    T_RBRACKET  shift, and go to state 26
    '&'         shift, and go to state 27
    '/'         shift, and go to state 28

    $default  reduce using rule 60 (args_list)

    func_ident  go to state 32
    variable    go to state 38
    methodop    go to state 45
    args_list   go to state 71
    expr        go to state 72
    p6regex     go to state 48
    number      go to state 49
    constants   go to state 50
    prefix      go to state 51
    stringc     go to state 52


state 26

   71 expr: T_RBRACKET . args_list T_RBRACKET

    T_ID        shift, and go to state 1
    T_DIGIT     shift, and go to state 2
    T_STRINGC   shift, and go to state 3
    T_SIGIL     shift, and go to state 4
    T_BAR       shift, and go to state 17
    T_PLUS      shift, and go to state 18
    T_STITCH    shift, and go to state 19
    T_LPAREN    shift, and go to state 25
    T_RBRACKET  shift, and go to state 26
    '&'         shift, and go to state 27
    '/'         shift, and go to state 28

    T_RBRACKET  [reduce using rule 60 (args_list)]
    $default    reduce using rule 60 (args_list)

    func_ident  go to state 32
    variable    go to state 38
    methodop    go to state 45
    args_list   go to state 73
    expr        go to state 72
    p6regex     go to state 48
    number      go to state 49
    constants   go to state 50
    prefix      go to state 51
    stringc     go to state 52


state 27

   13 func_ident: '&' . T_ID

    T_ID  shift, and go to state 74


state 28

   76 p6regex: '/' . nibbler '/'

    T_STRINGC  shift, and go to state 75
    '|'        shift, and go to state 76

    nibbler  go to state 77


state 29

    0 $accept: prog . $end

    $end  shift, and go to state 78


state 30

    1 prog: stmts .
    3 stmts: stmts . stmt

    T_ID         shift, and go to state 1
    T_DIGIT      shift, and go to state 2
    T_STRINGC    shift, and go to state 3
    T_SIGIL      shift, and go to state 4
    T_MY         shift, and go to state 5
    T_PACKAGE    shift, and go to state 6
    T_MODULE     shift, and go to state 7
    T_CLASS      shift, and go to state 8
    T_GRAMMAR    shift, and go to state 9
    T_ROLE       shift, and go to state 10
    T_SUB        shift, and go to state 11
    T_METHOD     shift, and go to state 12
    T_SUBMETHOD  shift, and go to state 13
    T_REGEX      shift, and go to state 14
    T_TOKEN      shift, and go to state 15
    T_RULE       shift, and go to state 16
    T_BAR        shift, and go to state 17
    T_PLUS       shift, and go to state 18
    T_STITCH     shift, and go to state 19
    T_IF         shift, and go to state 20
    T_UNLESS     shift, and go to state 21
    T_FOR        shift, and go to state 22
    T_WHILE      shift, and go to state 23
    T_RETURN     shift, and go to state 24
    T_LPAREN     shift, and go to state 25
    T_RBRACKET   shift, and go to state 26
    '&'          shift, and go to state 27
    '/'          shift, and go to state 28

    $default  reduce using rule 1 (prog)

    stmt                   go to state 79
    func_ident             go to state 32
    package_declarator     go to state 33
    func_declarator        go to state 34
    regex_declarator       go to state 35
    regex_type_identifier  go to state 36
    var_declarator         go to state 37
    variable               go to state 38
    stmt_control           go to state 39
    if_stmt                go to state 40
    unless_stmt            go to state 41
    for_stmt               go to state 42
    for_inline_stmt        go to state 43
    while_stmt             go to state 44
    methodop               go to state 45
    expr_list              go to state 46
    expr                   go to state 47
    p6regex                go to state 48
    number                 go to state 49
    constants              go to state 50
    prefix                 go to state 51
    stringc                go to state 52


state 31

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


state 32
